tests/relative_resource_files/relative_resource_files.exp
Error ----------------------------------------------------------------------------------------------------- main.js:2:22

Cannot resolve module `./d3.css`. [cannot-resolve-module]

   2| var d3_css = require('./d3.css'); // error - missing resource file
                           ^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- main.js:3:22

Cannot resolve module `./d3.mov`. [cannot-resolve-module]

   3| var d3_mov = require('./d3.mov'); // error - existing non-resource file
                           ^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- main.js:4:22

Cannot resolve module `./d3.tar`. [cannot-resolve-module]

   4| var d3_tar = require('./d3.tar'); // error - missing non-resource file
                           ^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------------ main.js:6:2

Cannot cast `d3_svg.x` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   main.js:6:2
   6| (d3_svg.x: string); // error number ~> string
       ^^^^^^^^

References:
   d3.svg.js:1:18
   1| export const x = 1;
                       ^ [1]
   main.js:6:12
   6| (d3_svg.x: string); // error number ~> string
                 ^^^^^^ [2]



Found 4 errors
